--- a/recipes/spongeCake.html
+++ b/recipes/spongeCake.html
@@ -13,7 +13,7 @@
 
         <h2>Sponge Cake</h2>
         <p>This easy sponge cake is soft, fluffy, and light as air! It's a simple recipe for basic sponge cake made with ingredients including cake flour, beaten eggs, and sugar for an easy, simple sponge cake that's moist and soft!</p>
-        <p>BY Jamie</p>
+        <p>By Jamie</p>
 
         <h3>Ingredients</h3>
         <ul>
